--- a/_quarto.yml
+++ b/_quarto.yml
@@ -22,6 +22,8 @@ website:
         href: index.qmd#Año
       - text: "Información"
         href: about.qmd
+      - text: ¿Quieres aportar?
+        href: about.qmd#aporte
 
     
     tools:
